--- a/src/assets/less/elements/countdown.less
+++ b/src/assets/less/elements/countdown.less
@@ -70,6 +70,10 @@
     text-shadow: @color-main-5 0 -1px 0;
 }
 
+.js .countdown__hiddenLabel {
+    display: none;
+}
+
 .countdown__character {
 
     margin: 1px;
