--- a/src/templates/pages/elements/rangeInput.html
+++ b/src/templates/pages/elements/rangeInput.html
@@ -12,4 +12,18 @@
     </div>
 </div>
 
+<div class="documentation__block">
+    <div class="documentation__example" yoi-printcode="language:markup; print:true;">
+        <div class="rangeInput w-30 m-tb-4 m-lr-auto" yoi-rangeinput="min:1; max:100; absMin:1; absMax:100;">
+            <div class="js-fallback">
+                <label for="min">Mindestpreis</label>
+                <input type="text" value="10" name="min" />
+                <label for="max">Höchstpreis</label>
+                <input type="text" value="500" name="max" />
+                <input class="btn" type="submit" value="Anwenden" />
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
