--- a/src/templates/pages/elements/tabs.html
+++ b/src/templates/pages/elements/tabs.html
@@ -18,8 +18,8 @@ This is a basic example. Make sure to **add an #id to each tab** that you refere
 
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
-        <div class="tabs">
-            <div class="tabs__menu">
+        <div class="tabs" >
+            <div class="tabs__menu" yoi-tabs>
                 <ul class="tabs__items">
                     <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-1-1-a">Tab #1-a</a>
@@ -53,7 +53,7 @@ By default, all tabs take up the same with, like cells within in table row. Howe
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
         <div class="tabs">
-            <div class="tabs__menu tabs__menu--loose">
+            <div class="tabs__menu tabs__menu--loose" yoi-tabs>
                 <ul class="tabs__items">
                     <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-1-1-b">Tab #1-b</a>
@@ -87,7 +87,7 @@ Add the modifier `.tabs__menu--large` to the `.tabs__menu`.
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
         <div class="tabs">
-            <div class="tabs__menu tabs__menu--large">
+            <div class="tabs__menu tabs__menu--large" yoi-tabs>
                 <ul class="tabs__items">
                     <li class="tabs__item">
                         <a class="tabs__link" href="#tab-2-1">Tab #1</a>
@@ -120,7 +120,7 @@ Use the modifier `.tabs__menu--subtle` to create a clean and subtle tab menu.
 
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
-        <div class="tabs__menu tabs__menu--subtle">
+        <div class="tabs__menu tabs__menu--subtle" yoi-tabs>
             <ul class="tabs__items">
                 <li class="tabs__item">
                     <a class="tabs__link" href="#tab-7-1">Tab #1</a>
@@ -153,7 +153,7 @@ Add the modifier `.tabs__menu--checkmarks` to the `.tabs__menu` to display a che
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
         <div class="tabs">
-            <div class="tabs__menu tabs__menu--checkmarks tabs__menu--large">
+            <div class="tabs__menu tabs__menu--checkmarks tabs__menu--large" yoi-tabs>
                 <ul class="tabs__items">
                     <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-6-1">Tab 1</a>
@@ -184,7 +184,7 @@ Yoshino JavaScript is modular. This means, individual scripts expose some functi
             <a class="btn btn--large btn--rounded" href="#tab-4-3" yoi-scrollTo>Go to and show #tab-4-3</a>
         </div>
         <div class="tabs">
-            <div class="tabs__menu tabs__menu--large">
+            <div class="tabs__menu tabs__menu--large" yoi-tabs>
                 <ul class="tabs__items">
                     <li class="tabs__item">
                         <a class="tabs__link" href="#tab-4-1">Tab #1</a>
@@ -217,7 +217,7 @@ Add the modifier `.tabs__menu--arrows` to the `.tabs__menu` to get an alternativ
 
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
-        <div class="tabs__menu tabs__menu--arrows tabs__menu--large">
+        <div class="tabs__menu tabs__menu--arrows tabs__menu--large" yoi-tabs>
             <ul class="tabs__items">
                 <li class="tabs__item tabs__item is--active">
                     <a class="tabs__link" href="#tab-3a-1">Beschreibung</a>
@@ -241,7 +241,7 @@ Add the modifier `.tabs__menu--arrows` to the `.tabs__menu` to get an alternativ
 </div>
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
-        <div class="tabs__menu tabs__menu--arrows tabs__menu--large">
+        <div class="tabs__menu tabs__menu--arrows tabs__menu--large" yoi-tabs>
             <ul class="tabs__items">
                 <li class="tabs__item tabs__item is--active">
                     <a class="tabs__link" href="#tab-3b-1">
