--- a/src/templates/pages/js-interface/sticky.html
+++ b/src/templates/pages/js-interface/sticky.html
@@ -60,7 +60,7 @@ By using this keyword, the script selects the sticky element’s surrounding ele
         <div class="w-30 p-r-4">
             <div class="box h-30 p-2">
                 <span class="tc-gray-15 fs-15 pos-tr m-t-1 m-r-2">parent element</span>
-                <div class="w-6 h-6 p-2 bg-red-15 br" yoi-sticky="reference:parent;"></div>
+                <div class="w-6 h-6 p-2 bg-red-15 br" xxyoi-sticky="reference:parent;"></div>
             </div>
         </div>
     </div>
@@ -98,27 +98,27 @@ The default value for `start` is 0. The default value for `stop` is the body hei
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
         <div class="grid-float">
             <div class="w-1-4 p-r-4">
-                <p class="tc-gray-15 fs-15 m-b-4">stop: 200;</p>
+                <p class="tc-gray-15 fs-15 m-b-4">start: none;<br />stop: 200;</p>
                 <div class="h-40 pos-rel" id="example-1">
-                    <div class="w-6 h-6 p-2 bg-red-15 br" yoi-sticky="stop:200;"></div>
+                    <div class="w-6 h-6 p-2 bg-red-15 br" xxyoi-sticky="stop:200;"></div>
                 </div>
             </div>
             <div class="w-1-4 p-r-4">
-                <p class="tc-gray-15 fs-15 m-b-4">start: 30; stop: 200;</p>
+                <p class="tc-gray-15 fs-15 m-b-4">start: 30;<br />stop: 200;</p>
                 <div class="h-40 pos-rel" id="example-2">
-                    <div class="w-6 h-6 p-2 bg-red-15 br" yoi-sticky="start:30; stop:200;"></div>
+                    <div class="w-6 h-6 p-2 bg-red-15 br" xxyoi-sticky="start:30; stop:200;"></div>
                 </div>
             </div>
             <div class="w-1-4 p-r-4">
-                <p class="tc-gray-15 fs-15 m-b-4">start: 180; stop: 200;</p>
+                <p class="tc-gray-15 fs-15 m-b-4">start: 180;<br />stop: 200;</p>
                 <div class="h-40 pos-rel" id="example-3">
-                    <div class="w-6 h-6 p-2 bg-red-15 br" yoi-sticky="start:180; stop:200;"></div>
+                    <div class="w-6 h-6 p-2 bg-red-15 br" xxyoi-sticky="start:180; stop:200;"></div>
                 </div>
             </div>
             <div class="w-1-4 p-r-4">
-                <p class="tc-gray-15 fs-15 m-b-4">start: 30; stop: 350;</p>
+                <p class="tc-gray-15 fs-15 m-b-4">start: 30;<br />stop: 350;</p>
                 <div class="h-40 pos-rel" id="example-4">
-                    <div class="w-6 h-6 p-2 bg-red-15 br" yoi-sticky="start:30; stop:350;"></div>
+                    <div class="w-6 h-6 p-2 bg-red-15 br" xxyoi-sticky="start:30; stop:350;"></div>
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@ The most obvious use case for this script might be a menu that sticks while scro
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
         <div class="m-b-4 clearfix">
-            <div class="fl-l w-4 m-r-2" yoi-sticky="reference:parent">
+            <div class="fl-l w-4 m-r-2" xxyoi-sticky="reference:parent">
                 <div class="p-2 bg-blue-22 tc-blue-5 fw-bold br al-c">A</div>
             </div>
             <div class="fl-l w-1-2">
@@ -151,7 +151,7 @@ The most obvious use case for this script might be a menu that sticks while scro
             </div>
         </div>
         <div class="m-b-4 clearfix">
-            <div class="fl-l w-4 m-r-2" yoi-sticky="reference:parent">
+            <div class="fl-l w-4 m-r-2" xxyoi-sticky="reference:parent">
                 <div class="p-2 bg-blue-22 tc-blue-5 fw-bold br al-c">B</div>
             </div>
             <div class="fl-l w-1-2">
@@ -172,7 +172,7 @@ The most obvious use case for this script might be a menu that sticks while scro
             </div>
         </div>
         <div class="m-b-4 clearfix">
-            <div class="fl-l w-4 m-r-2" yoi-sticky="reference:parent">
+            <div class="fl-l w-4 m-r-2" xxyoi-sticky="reference:parent">
                 <div class="p-2 bg-blue-22 tc-blue-5 fw-bold br al-c">C</div>
             </div>
             <div class="fl-l w-1-2">
@@ -211,7 +211,7 @@ The most obvious use case for this script might be a menu that sticks while scro
             </div>
         </div>
         <div class="m-b-4 clearfix">
-            <div class="fl-l w-4 m-r-2" yoi-sticky="reference:parent">
+            <div class="fl-l w-4 m-r-2" xxyoi-sticky="reference:parent">
                 <div class="p-2 bg-blue-22 tc-blue-5 fw-bold br al-c">D</div>
             </div>
             <div class="fl-l w-1-2">
