--- a/src/assets/less/elements/modal.less
+++ b/src/assets/less/elements/modal.less
@@ -46,6 +46,10 @@
     padding: 0 1rem;
 }
 
+.modal__body:last-child {
+    margin-bottom: 1rem;
+}
+
 .modal__footer {
     .mixin-clearfix;
     border-top: @color-main-22 1px solid;
