--- a/src/assets/less/utilities/interaction.less
+++ b/src/assets/less/utilities/interaction.less
@@ -86,6 +86,11 @@
 .hvr-opacity-2:hover    { opacity: .2 !important; }
 .hvr-opacity-1:hover    { opacity: .1 !important; }
 
+// general focus classes
+
+.focus       { .mixin-focus() !important; }
+.focus-inset { .mixin-focus-inset() !important; }
+
 // transitions
 // ===========
 
