--- a/src/assets/less/elements/loading.less
+++ b/src/assets/less/elements/loading.less
@@ -1,61 +1,30 @@
 /** loading.less */
 
-.loading {
-
-    .mixin-defaultBorderRadius;
-    background: @color-attention-22;
-    border: @color-attention-20 1px solid;
+.loading::after {
+    animation: spin 1s infinite linear;
+    background: #fff;
+    border-radius: 50%;
+    border: 2px solid @gray-23;
+    border-top-color: @focusColor;
     box-sizing: border-box;
+    content: ' ';
     display: inline-block;
-    min-height: 30px;
-    min-width: 30px;
-    padding: 5px;
-
-    .msg {
-        color: @color-attention-10;
-        margin-left: 25px;
-    }
-
-    .pulse {
-        background: @color-attention-18;
-    }
-
-}
-
-.pulse {
-    animation-name: pulse;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-out;
-    background: @color-main-5;
-    border-radius: 1rem;
-    display: block;
-    height: 20px;
+    height: 3rem;
+    left: 50%;
+    margin-left: -1.5rem;
+    margin-top: -1.5rem;
     position: absolute;
-    width: 20px;
+    top: 50%;
+    width: 3rem;
 }
 
 // animation
 
-@keyframes pulse {
-    from {
-        opacity: 1;
-        transform: scale(1);
-    } to {
-        opacity: .5;
-        transform: scale(0.5);
+@keyframes spin {
+    0% {
+        transform: rotate(0);
     }
-}
-
-// load images
-
-.loadingImg {
-
-    background: @color-main-25 ~"url(../img/bg-loadAni-50x50.gif)" no-repeat center center;
-    display: inherit;
-
-    img {
-        display: block;
+    100% {
+      transform: rotate(360deg);
     }
-
 }
