--- a/src/assets/less/utilities/styling.less
+++ b/src/assets/less/utilities/styling.less
@@ -2,16 +2,20 @@
 
 // standard border
 
-.b-0   { border: 0 !important; }
-.b-t-0 { border-top: 0 !important; }
-.b-r-0 { border-right: 0 !important; }
-.b-b-0 { border-bottom: 0 !important; }
-.b-l-0 { border-left: 0 !important; }
-.b-all { border: @color-main-23 1px solid !important; }
-.b-t   { border-top: @color-main-23 1px solid !important; }
-.b-r   { border-right: @color-main-23 1px solid !important; }
-.b-b   { border-bottom: @color-main-23 1px solid !important; }
-.b-l   { border-left: @color-main-23 1px solid !important; }
+.b-0     { border: 0 !important; }
+.b-t-0   { border-top: 0 !important; }
+.b-r-0   { border-right: 0 !important; }
+.b-b-0   { border-bottom: 0 !important; }
+.b-l-0   { border-left: 0 !important; }
+.b-all   { border: @color-main-23 1px solid !important; }
+.b-t     { border-top: @color-main-23 1px solid !important; }
+.b-r     { border-right: @color-main-23 1px solid !important; }
+.b-b     { border-bottom: @color-main-23 1px solid !important; }
+.b-l     { border-left: @color-main-23 1px solid !important; }
+
+// "ghost" border
+
+.b-ghost { border: @gray-21 1px dashed !important; }
 
 // border-width
 
