--- a/src/templates/pages/js-interface/update.html
+++ b/src/templates/pages/js-interface/update.html
@@ -3,57 +3,28 @@
 
 {% markdown %}
 ## Update
-This script provides a simple interface to post a string to a given endpoint (eg. some backend script).
+This script provides a simple interface to post to a given endpoint (eg. some backend script) and inject the retrieved markup back into the document.
 
 |         |                                                                |
 | -       | -                                                              |
 | Js-File | [update.js]({{ pathToSourceFile }}assets/js/modules/update.js) |
 | Hooks   | `yoi-update`                                                   |
-{% endmarkdown %}
 
-<div class="note note--error b-0 note--large">
-    <div class="note__body">
-        <p>This script was designed for <strong>very simple use cases only</strong>! It asumes, that to the user it does not really matter if the post was succesful or not. There will always be a positive response message, if if the script failed to post.</p>
-    </div>
-</div>
-
-{% markdown %}
 ### Simple Example
-To use this script, create a basic `<form>`-element. Define an endpoint (= backend script) via the `action`-attribute. Make sure you also add a single hidden input field which you can name however you wish. This field’s value gets posted to the endpoint. Please make sure to include a single `submit-` or `button`-element as well. *There will always be a standard, positive response*, no matter if the post fails or succeeds.
 {% endmarkdown %}
 
 <div class="documentation__block">
     <div class="documentation__example" yoi-printcode="language:markup; print:true;">
-        <form action="http://reqres.in/api/test" yoi-microsubmit>
-            <input type="hidden" name="message" value="My message" />
-            <button class="btn btn--large">Submit My Message</button>
-        </form>
-    </div>
-</div>
-
-{% markdown %}
-### Custom Response Message
-To add custom response message/markup, create any element you like and assign a unique `id` – eg. *myResponse* to it. Tell the script which custom response message it should use by adding `response:#myId` to the custom `yoi-microsubmit` attribute. Your custom response markup gets hidden on page load and revealed after the form got submitted.
-{% endmarkdown %}
-
-<div class="documentation__block">
-    <div class="documentation__example" yoi-printcode="language:markup; print:true;">
-        <form action="http://reqres.in/api/test" yoi-microsubmit="response:#myResponse">
-            <input type="hidden" name="message" value="My message" />
-            <button class="btn btn--large">Submit My Message & Show My Custom Response</button>
-        </form>
-        <div id="myResponse" class="fw-bold tc-green-12 h-4 lh-40 d-inlblk br bg-main-24 p-lr-4">Thank you!</div>
-    </div>
-</div>
-
-<div class="note note--subtle note--large">
-    <h3 class="note__headline">Check List:</h3>
-    <div class="note__body">
-        <ul class="checkList p-l-0 m-tb-2">
-            <li class="checkList__item">The DOM element which is tagged with a yoi-microsubmit attribute must be a form element!</li>
-            <li class="checkList__item">The very form must contain a single submit- or button-element!</li>
-            <li class="checkList__item">The very form must contain a single hidden input-element to define the message the script submits!</li>
-        </ul>
+        <div class="btns">
+            <button class="btn btn--large" yoi-update="url:demos/ajaxSource-1.html;target:#container;">What is Valium?</button>
+            <button class="btn btn--large" yoi-update="url:demos/ajaxSource-2.html;target:#container;">What is Strychnine?</button>
+            <button class="btn btn--large" yoi-update="url:demos/ajaxSource-xyz.html;target:#container;">Why 42?</button>
+        </div>
+        <div id="container" class="pos-rel m-t-4">
+            <div class="p-4 b-ghost br">
+                <p class="fs-15">Response goes here …</p>
+            </div>
+        </div>
     </div>
 </div>
 
