--- a/src/less/elements/article.less
+++ b/src/less/elements/article.less
@@ -74,5 +74,13 @@
     > .note {
         @verticalRhythm();
     }
+    
+    // block quotes
+    
+    > blockquote {
+        border-left: @color-main-22 2px solid;
+        font-style: italic;
+        padding-left: 2.5rem;
+    }
 
 }
