--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ page.lang | default: site.lang | default: "en" }}">
     <head>
         <meta charset="utf-8">
-        <title>Juvalis</title>
-        <link href="{{ site.baseurl }}dist/css/yoi.css" rel="stylesheet" />
+        <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
+        <link href="{{ site.baseurl }}assets/css/yoi.css" rel="stylesheet" />
         <link rel="shortcut icon" href="{{ site.baseurl }}favicon.ico" type="image/x-icon" />
     </head>
     <body class="noJs" yoi-environment="modal-desktop">
         <script>document.body.className='js';</script>
         <div class="modalPage">
             <a class="btn btn--large btn--subtle m-4" href="#link_back_to_previous_page">
-                <span class="icon">{% icon {id:'008-s'} %}</span>
+                <object class="icon" type="image/svg+xml" data="{{ site.icon }}008-s"></object>
                 <span>zurück</span>
             </a>
-            {% block main %}{% endblock %}
+            <div class="modal">
+                <div class="modal__header">
+                    <h3 class="modal__title">Demo Modal</h3>
+                </div>
+                <div class="modal__body">
+                    {{ content }}
+                </div>
+                <div class="modal__footer">
+                    <button class="btn btn--large btn--dark fl-r">OK</button>
+                    <span class="btn btn--large btn--subtle fl-r m-r-1" yoi-action="closeModal">Cancel</span>
+                </div>
+            </div>
         </div>
         <script src="{{ site.baseurl }}assets/js/jquery.min.js"></script>
         <script src="{{ site.baseurl }}assets/js/yoi.js"></script>
