--- a/src/less/elements/buttons.less
+++ b/src/less/elements/buttons.less
@@ -53,7 +53,7 @@
 
         filter: drop-shadow(0 1px 0 @color-main-25);
 
-        circle, ellipse, path, polygon {
+        svg circle, svg ellipse, svg path, svg polygon {
             fill: @color-main-8;
         }
 
@@ -157,7 +157,7 @@
 
             filter: drop-shadow(0 1px 0 @color-white);
 
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-main-10;
             }
 
@@ -200,7 +200,7 @@
 
             filter: drop-shadow(0 -1px 0 @color-main-7);
 
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-main-25;
             }
 
@@ -244,7 +244,7 @@
 
             filter: drop-shadow(0 1px 0 @color-attention-22);
 
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-attention-8;
             }
 
@@ -288,7 +288,7 @@
 
             filter: drop-shadow(0 1px 0 @color-negative-22);
 
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-negative-6;
             }
 
@@ -334,7 +334,7 @@
 
             filter: drop-shadow(0 1px 0 @color-positive-23);
 
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-positive-8;
             }
 
@@ -408,7 +408,7 @@
         text-shadow: none;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-main-10;
             }
         }
@@ -437,7 +437,7 @@
         text-shadow: none;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-main-25;
             }
         }
@@ -466,7 +466,7 @@
         text-shadow: none;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-attention-8;
             }
         }
@@ -496,7 +496,7 @@
         text-shadow: none;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-negative-5;
             }
         }
@@ -526,7 +526,7 @@
         text-shadow: none;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-positive-5;
             }
         }
@@ -569,7 +569,7 @@
 
         filter: none;
 
-        circle, ellipse, path, polygon {
+        svg circle, svg ellipse, svg path, svg polygon {
             fill: @color-main-20;
         }
 
@@ -616,7 +616,7 @@
         color: @color-white;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-white;
             }
         }
@@ -640,7 +640,7 @@
         color: @color-main-9;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-main-9;
             }
         }
@@ -664,7 +664,7 @@
         color: @color-attention-15;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-attention-15;
             }
         }
@@ -689,7 +689,7 @@
         color: @color-negative-18;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-negative-18;
             }
         }
@@ -714,7 +714,7 @@
         color: @color-positive-15;
 
         .icon {
-            circle, ellipse, path, polygon {
+            svg circle, svg ellipse, svg path, svg polygon {
                 fill: @color-positive-15;
             }
         }
