--- a/src/less/elements/link.less
+++ b/src/less/elements/link.less
@@ -1,8 +1,8 @@
 /** link.less */
 
-a,
-a:link,
-a:visited {
+a:not([class]),
+a:not([class]):link,
+a:not([class]):visited {
 
     color: @purple-12;
     text-decoration: underline;
