--- a/docs/_includes/menu-sub.html
+++ b/docs/_includes/menu-sub.html
@@ -1,3 +1,4 @@
+{% assign urlLastChar = page.url | slice: -1 1 %}
 <ul class="linkList linkList--large bg-transparent b-0 br-0">
     {% for group in site.data.sitemap %}
         <li class="linkList__item fw-bold">
@@ -5,7 +6,7 @@
         </li>
         {% if page.group == group.first %}
             {% for groupPage in site.data.sitemap[page.group] %}
-                <li class="linkList__item{% if page.url contains groupPage %} is--active{% endif %}">
+                <li class="linkList__item{% if (page.url contains groupPage) or (urlLastChar == "/" and groupPage == "index") %} is--active{% endif %}">
                     <a class="linkList__link" href="{{ site.baseurl }}{{ page.group }}/{{ groupPage }}.html">{% if groupPage == "index" %}Introduction{% else %}{{ groupPage | replace: "_", " " | capitalize }}{% endif %}</a>
                 </li>
             {% endfor %}
