--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
+        {% if jekyll.environment == "production" %}
+            <base href="/ui-core" />
+        {% endif %}
         <link href="{{ site.baseurl }}assets/css/yoi.css" rel="stylesheet" />
         <link href="{{ site.baseurl }}css/documentation.css" rel="stylesheet" />
         <link href="{{ site.baseurl }}favicon.ico" rel="shortcut icon" type="image/x-icon" />
