fixing github-pages paths

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
         {% if jekyll.environment == "production" %}
-            <base href="/ui-core" />
+            <base href="/ui-core/" />
         {% else %}
             <base href="/" />
         {% endif %}
