fixing github-pages paths

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -6,9 +6,9 @@
         {% if jekyll.environment == "development" %}
             <base href="/" />
         {% endif %}
-        <link href="{{ site.github.url }}assets/css/yoi.css" rel="stylesheet" />
-        <link href="{{ site.github.url }}css/documentation.css" rel="stylesheet" />
-        <link href="{{ site.github.url }}favicon.ico" rel="shortcut icon" type="image/x-icon" />
+        <link href="{{ site.github.url }}/assets/css/yoi.css" rel="stylesheet" />
+        <link href="{{ site.github.url }}/css/documentation.css" rel="stylesheet" />
+        <link href="{{ site.github.url }}/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     </head>
     <body class="noJs" yoi-environment="desktop">
         <script>document.body.className='js';</script>
@@ -32,8 +32,8 @@
                 <p>Listening</p>
             </div>
         </div>
-        <script src="{{ site.github.url }}assets/js/jquery.min.js"></script>
-        <script src="{{ site.github.url }}js/documentation.js"></script>
-        <script src="{{ site.github.url }}assets/js/yoi.js"></script>
+        <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
+        <script src="{{ site.github.url }}/js/documentation.js"></script>
+        <script src="{{ site.github.url }}/assets/js/yoi.js"></script>
     </body>
 </html>
