--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>YOI – Yoshino UI Core | {{ page.title | default: "Documentation" }}</title>
-        <link href="{{ site.github.url }}assets/css/yoi.css" rel="stylesheet" />
-        <link rel="shortcut icon" href="{{ site.github.url }}favicon.ico" type="image/x-icon" />
+        <link href="{{ site.github.url }}/assets/css/yoi.css" rel="stylesheet" />
+        <link rel="shortcut icon" href="{{ site.github.url }}/favicon.ico" type="image/x-icon" />
     </head>
     <body class="noJs" yoi-environment="modal-desktop">
         <script>document.body.className='js';</script>
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </div>
-        <script src="{{ site.github.url }}assets/js/jquery.min.js"></script>
-        <script src="{{ site.github.url }}assets/js/yoi.js"></script>
+        <script src="{{ site.github.url }}/assets/js/jquery.min.js"></script>
+        <script src="{{ site.github.url }}/assets/js/yoi.js"></script>
     </body>
 </html>
