--- a/docs/_includes/menu-sub.html
+++ b/docs/_includes/menu-sub.html
@@ -5,9 +5,10 @@
             <a class="linkList__link" href="{{ site.github.url }}/{{ group.first }}/">{{ group.first | capitalize }}</a>
         </li>
         {% if page.group == group.first %}
-            {% for groupPage in site.data.sitemap[page.group] %}
-                <li class="linkList__item{% if (page.url contains groupPage) or (urlLastChar == "/" and groupPage == "index") %} is--active{% endif %}">
-                    <a class="linkList__link" href="{{ site.github.url }}/{{ page.group }}/{{ groupPage | downcase }}.html">{% if groupPage == "index" %}Introduction{% else %}{{ groupPage | replace: "_", " " | capitalize }}{% endif %}</a>
+            {% for pageName in site.data.sitemap[page.group] %}
+                {% assign pageNameLowerCase = pageName | downcase %}
+                <li class="linkList__item{% if (page.url contains pageNameLowerCase) or (urlLastChar == "/" and pageNameLowerCase == "index") %} is--active{% endif %}">
+                    <a class="linkList__link" href="{{ site.github.url }}/{{ page.group }}/{{ pageNameLowerCase }}.html">{% if pageNameLowerCase == "index" %}Introduction{% else %}{{ pageName | replace: "_", " " | capitalize }}{% endif %}</a>
                 </li>
             {% endfor %}
         {% endif %}
