--- a/src/less/core/mixins.less
+++ b/src/less/core/mixins.less
@@ -81,3 +81,33 @@
         outline-color: @color-transparent;
     }
 }
+
+// typography
+// ==========
+
+.mixin-rts() {
+
+    // responsive type scaling (rts)
+
+    @rts-minViewportWidth : 400;
+    @rts-maxViewportWidth : 800;
+    @rts-minFontSize      : 12;
+    @rts-maxFontSize      : 24; 
+
+    :root {
+        font-size: @rts-minFontSize * 1px;
+    }
+
+    @media (min-width: @rts-minVieportWidth * 1px) and (max-width: @rts-maxVieportWidth * 1px) {
+        :root {
+            font-size: calc(@rts-minFontSize * 1px + (@rts-maxFontSize - @rts-minFontSize) * ((100vw - @rts-minVieportWidth * 1px) / (@rts-maxVieportWidth - @rts-minVieportWidth)));
+        }
+    }
+
+    @media (min-width: @rts-maxViewportWidth * 1px) {
+        :root {
+            font-size: @rts-maxFontSize * 1px;
+        }
+    }
+
+}
